# praticed the "row and col" class of boostrap

--- a/progress_bar_loader.html
+++ b/progress_bar_loader.html
@@ -154,5 +154,13 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col border">
+            <h1>col-1</h1>
+        </div>
+        <div class="col border">
+            <h1>col-2</h1>
+        </div>
+    </div>
 </body>
 </html>
